# SegmentedInterpolativeMotionBlurAlembic

./: CMakeLists.txt
dev/: CMakeLists.txt  abc2ass_main.cpp  abc2obj_velocities_as_normals_main.cpp  generate_points_test_data_main.cpp  multiarray_arnoldarray_layout_check_main.cpp  query_alembic_main.cpp
dev/abc2ass_monolithic/: CMakeLists.txt  abc2ass_monolithic_main.cpp
dev/abc2ass_separate_schema/: AbstractGeomSchemaHandler.cpp  AbstractGeomSchemaHandler.h  AbstractPointsSchemaHandler.cpp  AbstractPointsSchemaHandler.h  AbstractPolyMeshSchemaHandler.cpp  AbstractPolyMeshSchemaHandler.h  ArnoldPointsSchemaHandler.cpp  ArnoldPointsSchemaHandler.h  ArnoldPolyMeshSchemaHandler.cpp  ArnoldPolyMeshSchemaHandler.h  ArnoldTypes.h  ArnoldUtils.cpp  ArnoldUtils.h  CMakeLists.txt  PointsSchemaHandler.cpp  PointsSchemaHandler.h  PolyMeshSchemaHandler.cpp  PolyMeshSchemaHandler.h  Types.h  Utils.cpp  Utils.h  abc2ass_separate_schema_main.cpp
dev/multiple_renderer_separate_schema/: AbstractGeomSchemaHandler.cpp  ArnoldTypes.h  CMakeLists.txt  Types.h  Utils.h
dev/multiple_renderer_separate_schema/arnold/: ArnoldPointsSchemaHandler.cpp  ArnoldUtils.cpp  ArnoldUtils.h
dev/multiple_renderer_separate_schema/base/: AbstractGeomSchemaHandler.h  AbstractPointsSchemaHandler.cpp  CMakeLists.txt  Utils.cpp  Utils.h
dev/multiple_renderer_separate_schema/renderman/: CMakeLists.txt  RendermanPointsSchemaHandler.cpp  RendermanPointsSchemaHandler.h  RendermanPolyMeshSchemaHandler.cpp  RendermanPolyMeshSchemaHandler.h  RendermanTypes.h  RendermanUtils.cpp  RendermanUtils.h  abc2rib_separate_schema_main.cpp
dev/procedural_multiple_renderer_separate_schema/: CMakeLists.txt
dev/procedural_multiple_renderer_separate_schema/arnold/: ArnoldGeomSchemaHandler.h  ArnoldPointsSchemaHandler.cpp  ArnoldPointsSchemaHandler.h  ArnoldPolyMeshSchemaHandler.cpp  ArnoldPolyMeshSchemaHandler.h  ArnoldTypes.h  ArnoldUtils.cpp  ArnoldUtils.h  CMakeLists.txt  ProcArgs.cpp  ProcArgs.h  abc2ass_separate_schema_main.cpp
dev/procedural_multiple_renderer_separate_schema/base/: AbstractPointsSchemaHandler.cpp  AbstractPointsSchemaHandler.h  AbstractPolyMeshSchemaHandler.cpp  AbstractPolyMeshSchemaHandler.h  CMakeLists.txt  Utils.cpp  Utils.h
dev/procedural_multiple_renderer_separate_schema/renderman/: CMakeLists.txt  RendermanPointsSchemaHandler.cpp  RendermanPointsSchemaHandler.h  RendermanPolyMeshSchemaHandler.cpp  RendermanPolyMeshSchemaHandler.h  RendermanUtils.cpp  RendermanUtils.h  abc2rib_separate_schema_main.cpp  dynamicload_render.rib  runprogram_render.rib  test_render.rib
dev/velocities_sidecar/: CMakeLists.txt  VelocitySideCar.cpp  VelocitySideCar.h  generate_velocities_sidecar_main.cpp  read_velocities_sidecar_main.cpp
include/: simba_logging.h
lib/: interpolate.hpp
unit_test/: CMakeLists.txt  interpolate_test_suite.hpp  unit_test_main.cpp
