CMAKE_MINIMUM_REQUIRED ( VERSION 2.8 )

PROJECT ( Simba )

SET ( SIMBA_ENABLE_ALEMBIC_HDF5 0 CACHE STRING "Enabling Alembic with HDF5 variable defaulting to '0'")

FIND_PACKAGE ( ILMBase REQUIRED )
FIND_PACKAGE ( Boost 1.52 REQUIRED unit_test_framework )
FIND_PACKAGE ( Alembic REQUIRED )
IF ( SIMBA_ENABLE_ALEMBIC_HDF5 )
  FIND_PACKAGE ( HDF5 REQUIRED )
  INCLUDE_DIRECTORIES ( ${HDF5_C_INCLUDE_DIR} )
  ADD_DEFINITIONS ( -DSIMBA_ENABLE_ALEMBIC_HDF5 )
ENDIF ( SIMBA_ENABLE_ALEMBIC_HDF5 )
FIND_PACKAGE ( Arnold REQUIRED )

INCLUDE_DIRECTORIES (
  ${Boost_INCLUDE_DIR}
  ${ILMBASE_INCLUDE_DIRS}
  ${ALEMBIC_INCLUDE_DIR}
  ${ARNOLD_INCLUDE_DIR}
  )

IF ( NOT WIN32 )
  ADD_DEFINITIONS ( -fPIC )
ENDIF ( NOT WIN32 )

ADD_SUBDIRECTORY ( lib )
ADD_SUBDIRECTORY ( dev )
ADD_SUBDIRECTORY ( unit_test )
