CMAKE_MINIMUM_REQUIRED ( VERSION 2.8 )

PROJECT ( Simba )

SET ( SIMBA_ENABLE_ALEMBIC_HDF5 OFF CACHE STRING "Enabling Alembic with HDF5 variable defaulting to 'OFF'")

FIND_PACKAGE ( CryptoPP REQUIRED )
FIND_PACKAGE ( GoogleLog REQUIRED )
FIND_PACKAGE ( S2AA REQUIRED )
FIND_PACKAGE ( ILMBase REQUIRED )
FIND_PACKAGE ( Boost 1.52 REQUIRED program_options unit_test_framework serialization )
FIND_PACKAGE ( Alembic REQUIRED )
IF ( SIMBA_ENABLE_ALEMBIC_HDF5 )
  FIND_PACKAGE ( HDF5 REQUIRED COMPONENTS C HL )
  INCLUDE_DIRECTORIES ( ${HDF5_C_INCLUDE_DIR} )
  ADD_DEFINITIONS ( -DSIMBA_ENABLE_ALEMBIC_HDF5 )
ENDIF ( SIMBA_ENABLE_ALEMBIC_HDF5 )
FIND_PACKAGE ( Arnold REQUIRED )
FIND_PACKAGE ( Delight REQUIRED )

INCLUDE_DIRECTORIES (
  ${CryptoPP_INCLUDE_DIR}
  ${Boost_INCLUDE_DIR}
  ${ILMBASE_INCLUDE_DIRS}
  ${ALEMBIC_INCLUDE_DIR}
  ${ARNOLD_INCLUDE_DIR}
  ${DELIGHT_INCLUDE_DIR}
  ${S2AA_INCLUDE_DIR}
  ${GLOG_INCLUDE_DIR}
  )

IF ( NOT WIN32 )
  ADD_DEFINITIONS ( -fPIC )
ENDIF ( NOT WIN32 )

ADD_SUBDIRECTORY ( lib )
ADD_SUBDIRECTORY ( dev )
ADD_SUBDIRECTORY ( unit_test )
